apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__abstract_types_in_requires.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "entity": {
      "fieldWithDependencies": "success"
    }
  }
}
