apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__aliased_typename_on_fragments.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: aliased_typename
---
{
  "data": {
    "dog": {
      "__isCatOrDog": "Dog",
      "name": "Spot",
      "nickname": "Spo",
      "barkVolume": 7
    }
  }
}
