apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__defer_labeled_fragment_spread_multiple_times-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": true,
  "incremental": [
    {
      "label": "UserFrag",
      "data": {
        "name": "Ada"
      },
      "path": [
        "currentUser"
      ]
    }
  ]
}
