apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__defer_labeled_fragment_spread_multiple_times-3.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "label": "UserFrag",
      "data": {
        "name": "Grace"
      },
      "path": [
        "otherUser"
      ]
    }
  ]
}
