apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__defer_labeled_fragment_spread_multiple_times.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "id": "1"
    },
    "otherUser": {
      "id": "2"
    }
  },
  "hasNext": true
}
