apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__errors_on_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser"
      ],
      "errors": [
        {
          "message": "error user 0",
          "path": [
            "currentUser"
          ],
          "extensions": {
            "service": "user"
          }
        }
      ]
    }
  ]
}
