apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__errors_with_invalid_paths_on_query_with_defer.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
snapshot_kind: text
---
{
  "data": {
    "computer": {
      "id": "Computer1"
    }
  },
  "errors": [
    {
      "message": "Subgraph error with invalid path",
      "extensions": {
        "service": "computers",
        "truncatedPath": [
          "invalid",
          "path"
        ]
      }
    },
    {
      "message": "Subgraph error with partially valid path",
      "extensions": {
        "service": "computers",
        "truncatedPath": [
          "currentUser",
          "invalidSubpath"
        ]
      }
    }
  ],
  "hasNext": true
}
