apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__filter_nullified_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: deferred
---
{
  "hasNext": true,
  "incremental": [
    {
      "data": {
        "org": null
      },
      "path": [
        "currentUser"
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Null value found for non-nullable type ID",
            "path": [
              "currentUser",
              "org",
              "nonNullId"
            ]
          }
        ]
      }
    }
  ]
}
