apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__filter_nullified_deferred_responses-3.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: last
---
{
  "hasNext": false
}
